[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Debuff.gd" type="Script" id=1]
[ext_resource path="res://fonts/L_10646.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="Debuff" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.192157, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VSplitContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0

[node name="Title" type="RichTextLabel" parent="ColorRect/MarginContainer/VSplitContainer"]
margin_right = 1180.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Want a Debuff?"
text = "Want a Debuff?"
scroll_active = false

[node name="Rules" type="Label" parent="ColorRect/MarginContainer/VSplitContainer"]
margin_top = 104.0
margin_right = 1180.0
margin_bottom = 118.0
text = "Rules go here"
align = 1

[node name="HSplitContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VSplitContainer"]
margin_top = 122.0
margin_right = 1180.0
margin_bottom = 620.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/VSplitContainer/HSplitContainer"]
margin_right = 588.0
margin_bottom = 498.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Debuff" type="Button" parent="ColorRect/MarginContainer/VSplitContainer/HSplitContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
custom_fonts/font = SubResource( 3 )
text = "Yes"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/MarginContainer/VSplitContainer/HSplitContainer"]
margin_left = 592.0
margin_right = 1180.0
margin_bottom = 498.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_editor_description_": ""
}

[node name="NoDebuff" type="Button" parent="ColorRect/MarginContainer/VSplitContainer/HSplitContainer/MarginContainer2"]
margin_left = 30.0
margin_top = 30.0
margin_right = 558.0
margin_bottom = 468.0
custom_fonts/font = SubResource( 3 )
text = "No"

[connection signal="button_up" from="ColorRect/MarginContainer/VSplitContainer/HSplitContainer/MarginContainer/Debuff" to="." method="_on_Debuff_button_up"]
[connection signal="button_up" from="ColorRect/MarginContainer/VSplitContainer/HSplitContainer/MarginContainer2/NoDebuff" to="." method="_on_NoDebuff_button_up"]
